--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 linkedin_username: brandenolson
 twitter_username: DrOlsonSteele
-github_username:  BrandenOlson
+github_username:  the-bos
 
 # Build settings
 theme: minima
